Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

0.005  2017-08-26 18:55:22 UTC

  - A default Perl::Critic config file xt/author/perlcriticrc is created if
    none exists. Existing files are not changed
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Kwalitee
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::MinimumVersion
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Mojibake
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::NoTabs
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Perl::Critic
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Pod::No404s
  - Added
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Portability::Files
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Spelling
  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Version
  - Added Dist::Zilla::Role::Author::SKIRMESS::Test::XT
  - Added new modules to t/00-load.t
  - Added RemovePrereqs::Provided plugin
  - Added Test::CPAN::Meta release test
  - Added Test::CPAN::Meta::JSON release test
  - Allow stopwords configuration option for dist.ini
  - Increased required version of Test::Pod to 1.26
  - Moved Test::DistManifest test from author to release
  - Moved Test::Pod::No404s test from release to author
  - Reformatted Changes file to use less indentation
  - Removed check on AUTHOR_TESTING env variable for tests under xt
  - Removed Test::More import in tests that don't use Test::More directly
  - Require at least version 0.008 of Test::MinimumVersion
  - Scan bin, lib, t and xt directories with Test::Pod