@@ -9,15 +9,9 @@ use warnings;
 
 use File::Spec;
 
-my $rcfile;
-
-BEGIN {
-    $rcfile = File::Spec->catfile(qw(xt author perlcriticrc));
-}
-
 use Perl::Critic::Utils qw(all_perl_files);
 use Test::More;
-use Test::Perl::Critic ( -profile => $rcfile );
+use Test::Perl::Critic;
 
 my @dirs = qw(bin lib t xt);
 
